--- a/task.html
+++ b/task.html
@@ -11,7 +11,7 @@
     <div class="content">
         <header>
             <h1>Subject Page</h1>
-            <img src="https://motionarray.imgix.net/preview-736491-xt36ePQvnliK9iU2-large.jpg?w=1400&q=60&fit=max&auto=format" alt="">
+            <img src="https://t4.ftcdn.net/jpg/00/68/85/89/360_F_68858900_7KRDOJQYfK0h6HvEbc4ZnHx84HZXtVOq.jpg" alt="">
             <ul> 
                 <li><a > Home</a></li>
                 <li><a>IT</a></li>
